k0s/manifests/04-webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: webserver
spec:
  selector:
    app: webserver
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
